--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="description" content="example code for lit-element">
-    <title>react-redux-lit-html</title>
+    <title>lit-element-example</title>
   </head>
   <body>
-    <app-header headerTitle="lit-html-example" param="param"></app-header>
+    <app-header headerTitle="lit-element-example"></app-header>
     <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
     <script type="module" src="src/index.js"></script>
   </body>
